add config file option to master and replica

--- a/consul-leader-daemon.yml
+++ b/consul-leader-daemon.yml
@@ -30,10 +30,10 @@ spec:
               }
     spec:
       volumes:
-        - name: consul-data
+        - name: master-data
           hostPath:
             # directory location on host
-            path: /data/consul
+            path: /data
       containers: 
         - args:
             - "agent"
@@ -49,14 +49,16 @@ spec:
             - "/data/consul"
             - "-node"
             - "leader"
+            - "-config-file"
+            - "/data/conf/consul.json"
           image: "consul:0.7.2"
           imagePullPolicy: IfNotPresent
           name: consul-leader
           securityContext:
             privileged: true
           volumeMounts:
-            - mountPath: /data/consul
-              name: consul-data
+            - mountPath: /data
+              name: master-data
           ports:
             - containerPort: 8600
               name: dns-port
