generate acl tokens randomly

--- a/consul-client-daemon.yml
+++ b/consul-client-daemon.yml
@@ -12,8 +12,8 @@ spec:
     spec:
       volumes:
         - name: config-volume
-          configMap:
-            name: consul-client-config
+          secret:
+            secretName: consul-secrets
       containers: 
         - args: 
             - agent
