--- a/consul-secrets.yml
+++ b/consul-secrets.yml
@@ -5,12 +5,4 @@ metadata:
   namespace: kv
 data:
   consul.json: |
-    {"acl_datacenter": "global",
-     "acl_default_policy": "deny",
-     "acl_down_policy": "extend-cache",
-     "acl_master_token":"${acl_master_token:?}",
-     "acl_replication_token": "${acl_replication_token:?}",
-     "acl_agent_master_token": "${acl_agent_master_token:?}",
-     "acl_agent_token": "${acl_agent_token:?}",
-     "acl_token": "${acl_token:?}",
-     "acl_enforce_version_8": true}
+    ${secret:?}
