generate acl tokens randomly

--- a/consul-client-daemon.yml
+++ b/consul-client-daemon.yml
@@ -14,6 +14,7 @@ spec:
         - name: config-volume
           secret:
             secretName: consul-secrets
+            defaultMode: 0777
       containers: 
         - args: 
             - agent
