--- a/consul-replica-3-daemon.yml
+++ b/consul-replica-3-daemon.yml
@@ -40,7 +40,10 @@ spec:
             path: /data/consul
       containers:
         - args:
+            - "consul"
             - "agent"
+            - "data-dir=/consul/data"
+            - "config-dir=/data/config"
             - "-server"
             - "-bootstrap-expect"
             - "3"
@@ -58,7 +61,7 @@ spec:
           name: consul-replica-3
           volumeMounts:
             - name: config-volume
-              mountPath: /consul/config
+              mountPath: /data/config
             - mountPath: /consul/data
               name: master-data
           ports:
