generate acl tokens randomly

--- a/consul-client-daemon.yml
+++ b/consul-client-daemon.yml
@@ -19,8 +19,8 @@ spec:
         - args:
             - "consul"
             - "agent"
-            - "data-dir=/consul/data"
-            - "config-dir=/data/config"
+            - "-data-dir=/consul/data"
+            - "-config-dir=/data/config"
             - "-client"
             - "0.0.0.0"
             - "-ui"
