change to stateful set

--- a/consul-leader-daemon.yml
+++ b/consul-leader-daemon.yml
@@ -48,8 +48,7 @@ spec:
             - "-data-dir=/consul/data"
             - "-config-dir=/data/config"
             - "-server"
-            - "-bootstrap-expect"
-            - "3"
+            - "-bootstrap"
             - "-datacenter"
             - "global"
             - "-ui"
