--- a/consul-statefulsets.yml
+++ b/consul-statefulsets.yml
@@ -1,31 +1,4 @@
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: consul 
-  namespace: kv
-  labels:
-    app: consul
-spec:
-  clusterIP: None
-  ports:
-    # the port that this service should serve on
-    - name: dns
-      port: 8600
-    - name: http
-      port: 8500
-    - name: rpc
-      port: 8400
-    - name: serflan
-      port: 8301
-    - name: serfwan
-      port: 8302
-    - name: server
-      port: 8300
-  # label keys and values that must match in order to receive traffic for this service
-  selector:
-    app: consul
----
 apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
@@ -40,18 +13,24 @@ spec:
         app: consul
       annotations: 
           scheduler.alpha.kubernetes.io/affinity: >
-              {
+            {
               "podAntiAffinity": {
-                "requiredDuringSchedulingIgnoredDuringExecution": [{
-                  "labelSelector": {
-                    "matchExpressions": [{
-                      "key": "app",
-                      "operator": "In",
-                      "values": ["consul"]
-                    }]
-                  },
-                  "topologyKey": "kubernetes.io/hostname"
-                }]
+                "requiredDuringSchedulingIgnoredDuringExecution": [
+                  {
+                    "labelSelector": {
+                      "matchExpressions": [
+                        {
+                          "key": "app",
+                          "operator": "In",
+                          "values": [
+                            "consul"
+                          ]
+                        }
+                      ]
+                    },
+                    "topologyKey": "kubernetes.io\/hostname"
+                  }
+                ]
               }
             }
     spec:
