--- a/consul-leader-daemon.yml
+++ b/consul-leader-daemon.yml
@@ -10,24 +10,96 @@ spec:
       labels: 
         app: consul-leader
       annotations: 
-          scheduler.alpha.kubernetes.io/affinity: >
-              {
-                "nodeAffinity": {
-                    "requiredDuringSchedulingIgnoredDuringExecution": {
-                      "nodeSelectorTerms": [
-                        {
-                          "matchExpressions": [
-                            {
-                              "key": "kv-store-leader",
-                              "operator": "In",
-                              "values": ["yes"]
-                            }
-                          ]
-                        }
-                      ]
+        pod.beta.kubernetes.io/init-containers: >
+            [
+                {
+                "name": "backup-restore",
+                "image": "nebtex/backups",
+                "imagePullPolicy": "Always",
+                "env": [
+                  {
+                    "name": "APP_NAME",
+                    "value": "consul"
+                  },
+                  {
+                    "name": "NAMESPACE",
+                    "valueFrom": {
+                      "fieldRef": {
+                        "fieldPath": "metadata.namespace"
+                      }
+                    }
+                  },
+                  {
+                    "name": "POD_NAME",
+                    "value": "consul-leader"
+                  },
+                  {
+                    "name": "AWS_BUCKET",
+                    "valueFrom": {
+                      "secretKeyRef": {
+                        "name": "consul-backup-credentials",
+                        "key": "AWS_BUCKET"
+                      }
+                    }
+                  },
+                  {
+                    "name": "AWS_BUCKET",
+                    "valueFrom": {
+                      "secretKeyRef": {
+                        "name": "consul-backup-credentials",
+                        "key": "AWS_BUCKET"
+                      }
+                    }
+                  },
+                  {
+                    "name": "AWS_REGION",
+                    "valueFrom": {
+                      "secretKeyRef": {
+                        "name": "consul-backup-credentials",
+                        "key": "AWS_REGION"
+                      }
+                    }
+                  },
+                  {
+                    "name": "AWS_ACCESS_KEY_ID",
+                    "valueFrom": {
+                      "secretKeyRef": {
+                        "name": "consul-backup-credentials",
+                        "key": "AWS_ACCESS_KEY_ID"
+                      }
+                    }
+                  },
+                  {
+                    "name": "AWS_SECRET_ACCESS_KEY",
+                    "valueFrom": {
+                      "secretKeyRef": {
+                        "name": "consul-backup-credentials",
+                        "key": "AWS_SECRET_ACCESS_KEY"
+                      }
+                    }
+                  },
+                  {
+                    "name": "BORG_PASSPHRASE",
+                    "valueFrom": {
+                      "secretKeyRef": {
+                        "name": "consul-backup-credentials",
+                        "key": "BORG_PASSPHRASE"
+                      }
                     }
                   }
-              }
+                ],
+                "volumeMounts": [
+                    {
+                    "name": "consul-data",
+                    "mountPath": "/vulumes/consul/data"
+                    },
+                    {
+                    "name": "config-volume",
+                    "mountPath": "/vulumes/consul/config"
+                    }
+                ]
+                }
+            ]
     spec:
       volumes:
         - name: config-volume
@@ -37,11 +109,54 @@ spec:
               - key: consul.json
                 path: consul.json
                 mode: 0777
-        - name: master-data
-          hostPath:
-            # directory location on host
-            path: /data/consul
+        - name: consul-data
+          emptyDir: {}
       containers: 
+        - name: backups
+          args:
+          # backup each hour
+          - 0 * * * *
+          image: nebtex/backups
+          imagePullPolicy: Always
+          env:
+          - name: APP_NAME
+            value: consul
+          - name: NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
+          - name: POD_NAME
+            value: consul-leader
+          - name: AWS_BUCKET
+            valueFrom:
+              secretKeyRef:
+                name: consul-backup-credentials
+                key: AWS_BUCKET
+          - name: AWS_BUCKET
+            valueFrom:
+              secretKeyRef:
+                name: consul-backup-credentials
+                key: AWS_BUCKET
+          - name: AWS_REGION
+            valueFrom:
+              secretKeyRef:
+                name: consul-backup-credentials
+                key: AWS_REGION
+          - name: AWS_ACCESS_KEY_ID
+            valueFrom:
+              secretKeyRef:
+                name: consul-backup-credentials
+                key: AWS_ACCESS_KEY_ID
+          - name: AWS_SECRET_ACCESS_KEY
+            valueFrom:
+              secretKeyRef:
+                name: consul-backup-credentials
+                key: AWS_SECRET_ACCESS_KEY
+          - name: BORG_PASSPHRASE
+            valueFrom:
+              secretKeyRef:
+                name: consul-backup-credentials
+                key: BORG_PASSPHRASE               
         - args:
             - "consul"
             - "agent"
